k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: llm-tutor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: auth
          image: ghcr.io/edgarsilva-tech/llm_tutor/auth_service:dev   # altere para a sua imagem (ex.: ghcr.io/<org>/auth_service:v1.0.0)
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /docs
              port: 8001
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /docs
              port: 8001
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: llm-tutor
spec:
  selector:
    app: auth-service
  ports:
    - port: 8001
      targetPort: 8001
