k8s/postgres-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: llm-tutor
spec:
  type: ExternalName
  externalName: host.minikube.internal   # ex.: mydb.xxxx.rds.amazonaws.com
