k8s/quizz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quizz-service
  namespace: llm-tutor
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: quizz-service
  template:
    metadata:
      labels:
        app: quizz-service
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: regcred
      containers:
        - name: quizz
          image: ghcr.io/edgarsilva-tech/llm_tutor/quizz_service:dev-20260310-015355  # altere para a sua imagem (ex.: ghcr.io/<org>/quizz_service:v1.0.0)
          ports:
            - containerPort: 8004
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","sleep 5"]
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: quizz-service
  namespace: llm-tutor
spec:
  selector:
    app: quizz-service
  ports:
    - port: 8004
      targetPort: 8004
