k8s/rag.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-service
  namespace: llm-tutor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-service
  template:
    metadata:
      labels:
        app: rag-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: rag
          image: ghcr.io/edgarsilva-tech/llm_tutor/rag_service:dev_v3   # altere para a sua imagem (ex.: ghcr.io/<org>/rag_service:v1.0.0)
          ports:
            - containerPort: 8002
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rag-service
  namespace: llm-tutor
spec:
  selector:
    app: rag-service
  ports:
    - port: 8002
      targetPort: 8002
